# cy-weather

./: docker-compose.yaml  requirements.txt
.github/workflows/: deploy-frontend.yml  python-tests.yml  security.yml
api/: Dockerfile  main.py  pyproject.toml  requirements.txt  vercel.json
api/src/resources/: weather_resource.py
mlflow/: docker-compose.yaml
mlflow/tests/: mlflow_04_parameter_tuning.py
mlflow/tests_/: mlflow_03_load_latest_model.py
web/: vite.config.ts
